stefan; 20 aug 2003: extended test suite, now ready for additional tests
stefan; 6 aug 2003: bug 171 fixed (record printer now prints description of subtables)
stefan; 22 jul 2003: bug 4 improved (uses databaseMetaData,getIndexInfo() to manageIndexes() )
stefan; 16 jul 2003: bug 3 fixeed (ptrIndex and ptrOne are declared as unique)
stefan; 15 jul 2003: bug 4 fixed (unique indexes created and dropped in the DB as needed during table checking)
stefan; 4 jul 2003: unique MDD keyword supported on abstract level and is used in table creation (part of bug 4)
stefan; 2 jul 2003:improved solution for bug 449 (mak:value  maxLength, ellipsis...)
stefan; 2 jul 2003: fix for bug 366 (printVar for empty texts should be empty)
stefan; 30 jun 2003: bug 449 (limiting output of mak:value with new tag parameter e.g. maxLength)  semi fixed

0.5.9.7; 7 sep 2003 fred
fix for bug 555. IterationGroup starts at doBeginTag, ends at doEndTag; doesn't depend on onAfterBody to run.

0.5.9.6; 6 sep 2003 fred
# this release retrofits a number of "old improvements" which were at the HEAD of the main branch, 
# but can easily fit in the stable release
fred;  6 sep 2003: added Created-By: to the manifest (java version and vendor for the build)
cristi; 1 sept 2003: build.xml - changed the semantics of publishJar to only publish the version, not to tag anything. Tag needs be done manually before. A warning is displayed about that. (note: also other small changes in build.xml v2.2 -> 2.8)
fred; 24 aug 2003: bug 530 (added HtmlUtils to org.makumba package, the old class in org.makumba.util extends the new)
stefan; 23 jul 2003: bug 518: MakumbaSystem.getBuildDate(), development version 'number' includes it
fred; 1 jul 2003: fixed bug 34 (logout design, with wildcard "*") 

0.5.9.5; 1 sep 2003 cristi
bug 454: recompiled with antlr 2.7.2. Needs antlr.jar 2.7.2 in <webapp>/WEB-INF/classes/lib to run!

0.5.9.4; 30 jun 2003 cristi